[workspace]
resolver = "2"

members = ["metrics_types", "dw_server", "dw_client"]

[workspace.package]
version = "0.1.0-beta"
edition = "2021"
authors = ["eluvk.dev@gmail.com", "Charles.Liu@upblocks.io"]
description = "Data Warehouse Project"
rust-version = "1.66"


[workspace.dependencies]
metrics_types = { version = "0.1.0-beta", path = "./metrics_types" }
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
concurrent-queue = "2.2.0"
fake = { version = "2.6.0", features = ["derive"] }
futures-util = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
json = "0.12.4"
lazy_static = "1.4.0"
local-ip-address = "0.5.1"
mysql_async = "0.32.2"
rand = { version = "0.8.5" }
redis = { version = "0.23.0", features = ["tokio-comp"] }
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = { version = "1.0.40", default-features = false }
tokio = { version = "1.28.2", features = ["full"] }

tokio-test = "0.4.2"
