[package]
name = "dw_client"
version = "0.1.0-beta"
edition = "2021"
authors = ["Charles.Liu@upblocks.io"]
description = "Data Warehouse Project, Client Endpoint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "2.0.0"
hyper = { version = "0.14", features = ["full"] }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.21", features = ["full"] }
metrics_types = { version = "0.1.0-beta", path = "../metrics_types" }
regex = "1.7.0"
lazy_static = "1.4.0"
json = "0.12.4"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
fake = { version = "2.5", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }


[dev-dependencies]
tokio-test = "0.4.2"


[features]
default = []
fake_data = ["fake", "rand", "metrics_types/fake_data"]

[[bin]]
name = "dw_client_agent"
path = "agent/agent.rs"

[[bin]]
name = "dw_data_generator"
path = "data_generator/data_generator.rs"
required-features = ["fake_data"]
