[package]
name = "dw_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = { workspace = true }
hyper = { workspace = true, features = ["full"] }
thiserror = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["full"] }
metrics_types = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
json = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
fake = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true, optional = true }


[dev-dependencies]
tokio-test = { workspace = true }


[features]
default = []
fake_data = ["fake", "rand", "metrics_types/fake_data"]

[[bin]]
name = "dw_client_agent"
path = "agent/agent.rs"

[[bin]]
name = "dw_data_generator"
path = "data_generator/data_generator.rs"
required-features = ["fake_data"]
