[package]
name = "dw_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
json = { workspace = true }
mysql_async = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["full"] }
metrics_types = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }

[[bin]]
name = "dw_server_proxy"
path = "proxy/proxy.rs"

[[bin]]
name = "dw_server_consumer"
path = "consumer/consumer.rs"
