[package]
name = "metrics_types"
version = "0.1.0"
edition = "2021"
authors = ["Charles.Liu@upblocks.io"]
description = "Data Warehouse Project for TOP-Chain, Metrics Types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0", default-features = false }

[lib]
name = "metrics_types"
crate-type = ["lib"]

[dev-dependencies]