[package]
name = "metrics_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = { workspace = true }
hyper = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true, default-features = false }
local-ip-address = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
fake = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true, optional = true }

[features]
fake_data = ["fake", "rand"]

[lib]
name = "metrics_types"
crate-type = ["lib"]

[dev-dependencies]
tokio-test = { workspace = true }
